sandbox/output
StringCal.java:7: error: variable delimiter is already defined in method answer(String)
            String delimiter = str.split("//")[1].split("\n")[0];
                   ^
1 error
